--- a/exercice/CSS/style.css
+++ b/exercice/CSS/style.css
@@ -6,12 +6,13 @@ text-align: center;
 
 .juxtapose{
     margin-top: 10em;
-    width: 45%;
+    width: 40%;
     height: 550px;
-    margin-left:25em;
+    margin-left:15em;
     border-radius: 10px 10px 10px 10px;
     border-width: thick;
     border-color: #000;
+    float: left;
 
 }
 
@@ -19,6 +20,10 @@ h2{
     text-decoration: underline;
 }
 .p{
+width: 45%;
+float: right;
+padding-left: 1em;
+margin-top: 15em;
 
 }
 .clear{
