--- a/projet1/style.css
+++ b/projet1/style.css
@@ -6,32 +6,43 @@ h1{
     font-family: 'Bungee Inline', cursive;
     font-weight: bolder;
     font-size: 90px;
+    text-shadow: 10px 5px 7px deepskyblue;
 }
 .juxtapose{
-    float: left;
     width: 800px;
     height: 610px;
+    margin-top: 3%;
     border-radius: 10px 10px 10px 10px;
     border-width: thick;
     border-color: #000000;
 }
 
 article{
+    float: left;
+    width: 38%;
     text-align: left;
     text-shadow: 4px 2px burlywood;
     font-size: 32px;
 }
-.article1{
-    float: left;
-    width: 38%;
+
+.clear{
+    clear: both;
+}
+img{
+    border-radius: 10px 10px 10px 10px;
+    float: right;
+    margin-right: 10%;
+    margin-top: -3%;
+}
+img:hover{
+    box-shadow: 5px 5px 50px #03A9F4;
 }
 .article2{
     float: right;
-    margin-top: 5%;
+    margin-top: -25%;
+    margin-right: 0;
     width: 60%;
 }
-.article2 p{
-    margin-top: 330px;
-    margin-right: 300px;
-    margin-bottom: 0px;
+span{
+    margin-left: 17%;
 }
